--- a/vignettes/ProFound-Complex-Fit.Rmd
+++ b/vignettes/ProFound-Complex-Fit.Rmd
@@ -4,7 +4,7 @@ author: "Aaron Robotham"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{ProFound/ProFit: A Complex Fit}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
